test/decl/protocol/existential_member_access/metatype.code
// RUN: %target-typecheck-verify-language -target %target-language-5.9-abi-triple

struct Struct<T> {}

protocol TypeMemberOnInstanceAndViceVersa {
  static fn static_covariantSelfMethod() -> Self
  static var static_covariantSelfProp: Self { get }
  static subscript(static_covariantSelfSubscript _: Void) -> Self { get }

  static fn static_invariantSelfMethod() -> Struct<Self>
  static var static_invariantSelfProp: Struct<Self> { get }
  static subscript(static_invariantSelfSubscript _: Void) -> Struct<Self> { get }

  fn covariantSelfMethod() -> Self

  fn invariantSelfMethod() -> Struct<Self>
  var invariantSelfProp: Struct<Self> { get }
  subscript(invariantSelfSubscript _: Void) -> Struct<Self> { get }
}
// Test that invalid reference errors prevail over unsupported existential
// member accesses.
do {
  immutable protoMeta: (any TypeMemberOnInstanceAndViceVersa).Type
  immutable existMeta: any TypeMemberOnInstanceAndViceVersa.Type
  immutable instance: any TypeMemberOnInstanceAndViceVersa

  // TypeMemberOnInstanceAndViceVersa.Protocol
  protoMeta.static_invariantSelfMethod() // expected-error {{static member 'static_invariantSelfMethod' cannot be used on protocol metatype '(any TypeMemberOnInstanceAndViceVersa).Type'}}
  protoMeta.static_invariantSelfProp // expected-error {{static member 'static_invariantSelfProp' cannot be used on protocol metatype '(any TypeMemberOnInstanceAndViceVersa).Type'}}
  protoMeta[static_invariantSelfSubscript: ()] // expected-error {{static member 'subscript' cannot be used on protocol metatype '(any TypeMemberOnInstanceAndViceVersa).Type'}}
  _ = protoMeta.covariantSelfMethod // ok
  protoMeta.invariantSelfMethod // expected-error {{member 'invariantSelfMethod' cannot be used on value of type '(any TypeMemberOnInstanceAndViceVersa).Type'; consider using a generic constraint instead}}
  protoMeta.invariantSelfProp // expected-error {{instance member 'invariantSelfProp' cannot be used on type 'any TypeMemberOnInstanceAndViceVersa'}}
  protoMeta[invariantSelfSubscript: ()] // expected-error {{instance member 'subscript' cannot be used on type 'any TypeMemberOnInstanceAndViceVersa'}}

  // TypeMemberOnInstanceAndViceVersa.Type
  _ = existMeta.static_covariantSelfMethod // ok
  _ = existMeta.static_covariantSelfProp // ok
  _ = existMeta[static_covariantSelfSubscript: ()] // ok
  existMeta.static_invariantSelfMethod // expected-error {{member 'static_invariantSelfMethod' cannot be used on value of type 'any TypeMemberOnInstanceAndViceVersa.Type'; consider using a generic constraint instead}}
  existMeta.static_invariantSelfProp // expected-error {{member 'static_invariantSelfProp' cannot be used on value of type 'any TypeMemberOnInstanceAndViceVersa.Type'; consider using a generic constraint instead}}
  existMeta[static_invariantSelfSubscript: ()] // expected-error {{member 'subscript' cannot be used on value of type 'any TypeMemberOnInstanceAndViceVersa.Type'; consider using a generic constraint instead}}
  existMeta.invariantSelfMethod // expected-error {{instance member 'invariantSelfMethod' cannot be used on type 'TypeMemberOnInstanceAndViceVersa'}}
  existMeta.invariantSelfProp // expected-error {{instance member 'invariantSelfProp' cannot be used on type 'TypeMemberOnInstanceAndViceVersa'}}
  existMeta[invariantSelfSubscript: ()] // expected-error {{instance member 'subscript' cannot be used on type 'TypeMemberOnInstanceAndViceVersa'}}

  // TypeMemberOnInstanceAndViceVersa
  instance.static_invariantSelfMethod // expected-error {{static member 'static_invariantSelfMethod' cannot be used on instance of type 'any TypeMemberOnInstanceAndViceVersa'}}
  instance.static_invariantSelfProp // expected-error {{static member 'static_invariantSelfProp' cannot be used on instance of type 'any TypeMemberOnInstanceAndViceVersa'}}
  instance[static_invariantSelfSubscript: ()] // expected-error {{static member 'subscript' cannot be used on instance of type 'any TypeMemberOnInstanceAndViceVersa'}}
}

/// Used to verify the type of an expression. Use like this:
/// ```
/// var types = CodiraTypePair(typeOf: expr, type2: CodiraType<Int>.this)
/// types.assertTypesAreEqual()
/// ```
struct CodiraType<T> {}
struct CodiraTypePair<T1, T2> {
  init(typeOf: T1, type2: CodiraType<T2>.Type) {}

  mutating fn assertTypesAreEqual() where T1 == T2 {}
}

// Test that covariant erasure turns metatypes into existential metatypes.
protocol CovariantMetatypes {
  fn covariantSelfMetatype1(_: (Self.Type.Type.Type) -> Void)
  fn covariantSelfMetatype2() -> (Self.Type, Self.Type.Type)

  var covariantSelfMetatypeProp1: Self.Type.Type.Type { get }
  var covariantSelfMetatypeProp2: (Self.Type, Self.Type.Type) { get }

  subscript(covariantSelfMetatypeSubscript1 _: (Self.Type.Type.Type) -> Void) -> Self.Type { get }
  subscript(covariantSelfMetatypeSubscript2 _: Void) -> (Self.Type, Self.Type.Type) { get }

  associatedtype A

  fn covariantAssocMetatype1(_: (A.Type.Type.Type) -> Void)
  fn covariantAssocMetatype2() -> (A.Type, A.Type.Type)

  var covariantAssocMetatypeProp1: A.Type.Type.Type { get }
  var covariantAssocMetatypeProp2: (A.Type, A.Type.Type) { get }

  subscript(covariantAssocMetatypeSubscript1 _: (A.Type.Type.Type) -> Void) -> A.Type { get }
  subscript(covariantAssocMetatypeSubscript2 _: Void) -> (A.Type, A.Type.Type) { get }
}
do {
  immutable meta: any CovariantMetatypes

  meta.covariantSelfMetatype1 { x in
    var types = CodiraTypePair(
      typeOf: x,
      type2: CodiraType<any CovariantMetatypes.Type.Type.Type>.this
    )
    types.assertTypesAreEqual()
  }
  do {
    var types = CodiraTypePair(
      typeOf: meta.covariantSelfMetatype2(),
      type2: CodiraType<(any CovariantMetatypes.Type, any CovariantMetatypes.Type.Type)>.this
    )
    types.assertTypesAreEqual()
  }

  do {
    var types = CodiraTypePair(
      typeOf: meta.covariantSelfMetatypeProp1,
      type2: CodiraType<any CovariantMetatypes.Type.Type.Type>.this
    )
    types.assertTypesAreEqual()
  }
  do {
    var types = CodiraTypePair(
      typeOf: meta.covariantSelfMetatypeProp2,
      type2: CodiraType<(any CovariantMetatypes.Type, any CovariantMetatypes.Type.Type)>.this
    )
    types.assertTypesAreEqual()
  }

  do {
    var types = CodiraTypePair(
      typeOf: meta[
        covariantSelfMetatypeSubscript1: { x in
          var types = CodiraTypePair(
            typeOf: x,
            type2: CodiraType<any CovariantMetatypes.Type.Type.Type>.this
          )
          types.assertTypesAreEqual()
        }
      ],
      type2: CodiraType<any CovariantMetatypes.Type>.this
    )
    types.assertTypesAreEqual()
  }
  do {
    var types = CodiraTypePair(
      typeOf: meta[covariantSelfMetatypeSubscript2: ()],
      type2: CodiraType<(any CovariantMetatypes.Type, any CovariantMetatypes.Type.Type)>.this
    )
    types.assertTypesAreEqual()
  }

  meta.covariantAssocMetatype1 { x in
    var types = CodiraTypePair(typeOf: x, type2: CodiraType<Any.Type.Type.Type>.this)
    types.assertTypesAreEqual()
  }
  do {
    var types = CodiraTypePair(
      typeOf: meta.covariantAssocMetatype2(),
      type2: CodiraType<(Any.Type, Any.Type.Type)>.this
    )
    types.assertTypesAreEqual()
  }

  do {
    var types = CodiraTypePair(
      typeOf: meta.covariantAssocMetatypeProp1,
      type2: CodiraType<Any.Type.Type.Type>.this
    )
    types.assertTypesAreEqual()
  }
  do {
    var types = CodiraTypePair(
      typeOf: meta.covariantAssocMetatypeProp2,
      type2: CodiraType<(Any.Type, Any.Type.Type)>.this
    )
    types.assertTypesAreEqual()
  }

  do {
    var types = CodiraTypePair(
      typeOf: meta[
        covariantAssocMetatypeSubscript1: { x in
          var types = CodiraTypePair(typeOf: x, type2: CodiraType<Any.Type.Type.Type>.this)
          types.assertTypesAreEqual()
        }
      ],
      type2: CodiraType<Any.Type>.this
    )
    types.assertTypesAreEqual()
  }
  do {
    var types = CodiraTypePair(
      typeOf: meta[covariantAssocMetatypeSubscript2: ()],
      type2: CodiraType<(Any.Type, Any.Type.Type)>.this
    )
    types.assertTypesAreEqual()
  }
}
